# loccer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
examples/: quart_app.py
loccer/: __init__.py  bases.py  ltypes.py  utils.py
loccer/integrations/: asyncio_context.py  flask_context.py  packages_context.py  platform_context.py  quart_context.py  resources.py
loccer/outputs/: file_stream.py  misc.py  stderr.py
tests/: conftest.py  test_bases.py  test_main.py  test_outputs.py  test_utils.py
tests/integrations/: test_asyncio.py  test_flask.py  test_packages.py  test_platform.py  test_quart.py  test_resources.py
tests/outputs/: test_file_stream.py  test_stderr.py
