[project]
name = "loccer"
version = "1.2"
authors = [
    { name = "Martin Carnogursky", email="admin@sourcecode.ai"}
]
description = "Local error logging"
requires-python = ">=3.9"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
  "pytest>=7.2",
  "pytest-asyncio>=0.21.1",
  "build>=0.9"
]
test_integrations = [
    "Flask>=2.0",
    "Quart>=0.18.4",
    "blinker>1.0"
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
markers = []
